--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -9,6 +9,8 @@ $text-secondary : #94D9EC;
 $text-pink : #ff93c7;
 $text-gray : #B1B7BD;
 
+$shadow : 0 0 13px 0 rgba(185,185,185, .25);
+
 /* MEDIA QUERIES */
 $layout-breakpoint-small: 4.3em;
 $layout-breakpoint-medium: 6.9em;
