--- a/src/components/styles/Questions.scss
+++ b/src/components/styles/Questions.scss
@@ -1,12 +1,11 @@
 @import '../../styles/Variables.scss';
 
 .component-question {
-
-    .titulo {
-        color: #3a3a3a;
-        font-weight: 700;
+    padding: 2rem;
+    
+    .tittle {
         text-align: center;
-        margin: 60px 0;
+        margin: 4rem;
     }
 
     /*! =================================================*/
@@ -16,7 +15,7 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 20px;
-        margin-bottom: 60px;
+        margin-bottom: 4rem;
     }
 
     .categoria {
@@ -77,7 +76,7 @@
 
     .contenedor-pregunta {
         background: #fff;
-        padding: 40px;
+        padding: 2rem;
         border: 2px solid transparent;
         border-radius: 10px;
         overflow: hidden;
