--- a/src/components/styles/Cards.scss
+++ b/src/components/styles/Cards.scss
@@ -2,24 +2,53 @@
 
 
 .component-content--cards {
-    @extend %center;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
     flex-flow: row wrap;
-    padding: 3rem;
+    padding: 2rem;
+    gap: 2rem;
 
-    .cards__principal-thid_party {
+    .card--principal {
+        @extend %center;
+        width: 100%
+    }
+
+    .card--thid_party {
+        width: 100%;
+        height: 70vh;
+        overflow: scroll;
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        padding: 0 1rem 0 0;
+        overflow-x: hidden;
+    }
 
+    @media (min-width: $layout-breakpoint-small) {
         .card--principal {
-            @extend %center;
+            width: 90%;
         }
 
         .card--thid_party {
-            @extend %center;
-            flex-flow: column wrap;
-            gap: 1rem;
+            width: 90%;
+            height: 49vh;
+        }
+    }
+    
+    @media (min-width: $layout-breakpoint-medium) {
+        justify-content: space-between;
+
+        .card--principal {
+            width: 57%;
+        }
+
+        .card--thid_party {
+            width: 40%;
+            min-height: 79vh;
         }
 
     }
 }
+
+// @media screen and (max-width: $layout-breakpoint-small) {}
