--- a/src/components/styles/Firstview.scss
+++ b/src/components/styles/Firstview.scss
@@ -63,7 +63,7 @@
                 max-width: 40rem;
 
                 color: #fff;
-                text-shadow: 0px 0px 6px #000;
+                text-shadow: 0px 0px 1.4px #000;
                 margin: 6rem;
 
                 h1,
@@ -74,6 +74,8 @@
 
                 p {
                     margin-bottom: 1rem;
+                    font-weight: bold;
+                    font-size: 1.6rem;
                 }
             }
         }
