--- a/src/components/sub_components/styles/CardSecondary.scss
+++ b/src/components/sub_components/styles/CardSecondary.scss
@@ -4,12 +4,12 @@
     width: 100%;
     height: 10rem;
     @extend %center;
+    // gap: 1rem;
 
     border-radius: 0.4rem;
-    background: #8f8f8f14;
+    background: white;
     box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 75%);
 
-    overflow: hidden;
     position: relative;
     &:hover {
         box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 50%);
@@ -28,4 +28,9 @@
         width: 60%;
         padding-left: 0.8rem;
     }
+    @media (min-width: $layout-breakpoint-small) {
+       
+    }
+
+    @media (min-width: $layout-breakpoint-medium) {}
 }
