--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -12,9 +12,9 @@ $text-gray : #B1B7BD;
 $shadow : 0 0 13px 0 rgba(185,185,185, .25);
 
 /* MEDIA QUERIES */
-$layout-breakpoint-small: 4.3em;
-$layout-breakpoint-medium: 6.9em;
-$layout-breakpoint-large: 8.2em;
+$layout-breakpoint-small: 470px;
+$layout-breakpoint-medium: 850px;
+$layout-breakpoint-large: 1100px;
 
 /* VARIABLES ENVEVEW */
 %center {
