--- a/src/components/styles/Footer.scss
+++ b/src/components/styles/Footer.scss
@@ -3,89 +3,205 @@
 .component-footer {
     width: 100%;
     min-height: 12vh;
-    display: flex;
-    flex-direction: column;
     background-color: $base-dark;
     padding: 2rem;
 
     .footer--firstSection {
-        @extend %center;
+        display: flex;
         flex-direction: column;
 
-        .footer-text {
-            padding-right: 10vw;
-            padding-bottom: 1rem;
-            margin-bottom: 1rem;
-            border-bottom: dashed 2px rgb(100 174 193 / 90%);
-
-            .footer-text-color-2 {
-                color: $text-secondary;
-            }
-        }
-
-        .footer-languages {
-            width: 100%;
-            padding: 1rem 0;
-            padding-right: 24vw;
-
-            ul {
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                grid-gap: 2rem;
-                justify-content: start;
-            }
-        }
-
-        .footer-download-app{
+        .firstSection-box--one {
             display: flex;
-            padding: 2rem;
+            justify-content: space-between;
             flex-flow: row wrap;
-            justify-content: center;
-            gap: 1rem;
-            .appStore, platStore {
-                width: "140px";
+            gap: 2rem;
+
+            .box-one-logo {
+                width: 16%;
+                min-width: 9rem;
+                margin: 0 auto;
+            }
+
+            .box_one--subBoxA {
+                width: 100%;
+
+                .footer-text {
+                    padding-right: 10vw;
+                    padding-bottom: 1rem;
+                    border-bottom: dashed 2px rgb(100 174 193 / 90%);
+
+                    .footer-text-color-2 {
+                        color: $text-secondary;
+                    }
+                }
+
+                .footer-languages {
+                    width: 100%;
+                    padding: 1rem 0;
+                    padding-right: 24vw;
+
+                    ul {
+                        display: grid;
+                        grid-template-columns: repeat(2, 1fr);
+                        grid-gap: 2rem;
+                        justify-content: start;
+                    }
+                }
+
+                .footer-download-app {
+                    display: flex;
+                    padding: 2rem 0;
+                    flex-flow: row wrap;
+                    justify-content: space-around;
+                    gap: 1rem;
+
+                    .appStore,
+                    .playStore {
+                        height: fit-content;
+                    }
+                }
+
             }
         }
 
-        .footer-externalLink {
+        .footer-box--two {
             width: 100%;
-            padding: 1rem 0;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+
+            .footer-externalLink {
+                width: 100%;
+                min-width: 16rem;
+                padding: 1rem 0;
+                @extend %center;
+                flex-direction: column;
+                gap: 1rem;
+                justify-content: start;
+
+                h5 {
+                    border-bottom: dashed 2px rgb(100 174 193 / 90%);
+                    width: 100%;
+                    padding-bottom: 1rem;
+                    margin-bottom: 1rem;
+                }
+
+                ul {
+                    display: flex;
+                    flex-flow: row wrap;
+                    gap: 3rem;
+                    align-items: center;
+                }
+            }
+        }
+    
+        .footer-box--three{
+            display: flex;
+            flex-flow: row wrap;
+        }
+
+        .footer-generalInformation {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 3rem;
+
+            img {
+                max-width: 30rem;
+                margin: 0 auto;
+            }
+            .genealInformation--paragraph{
+                max-width: 46rem;
+            }
+        }
+
+        .footer-certification {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            gap: 2rem;
+            img{
+                max-width: 6rem;
+                margin: 0 auto;
+            }
+        }
+
+        .footer-legalInformation {
             @extend %center;
             flex-direction: column;
-            gap: 1rem;
-
-            h5 {
-                border-bottom: dashed 2px rgb(100 174 193 / 90%);
-                width: 100%;
-                padding-bottom: 1rem;
-                margin-bottom: 1rem;
-            }
-
-            ul {
-                display: flex;
-                flex-flow: row wrap;
-                gap: 3rem;
-                align-items: center;
-            }
-        }
-
-        .footer-services {
-            width: 100%
-        }
-
-        .footer-generalInformation{
-            width: 100%;
-        }
-        .footer-certification{
-            width: 100%;
-            display: flex;
-            gap : 2rem;
-        }
-        .footer-legalInformation{
+            gap: 2rem;
             width: 100%;
             text-align: center;
-            li{
+            
+            li {
                 line-height: 2.4rem;
+            }
+        }
+    }
+
+    @media (min-width: $layout-breakpoint-small) {
+        // background-color: rgb(58, 58, 58);
+
+        .footer--firstSection {
+
+            .firstSection-box--one {
+
+                margin-bottom: 2rem;
+
+                .box_one--subBoxA {
+
+                    width: 60%;
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    grid-template-rows: 30% 70%;
+                    grid-gap: 2rem;
+
+                    .footer-text {
+                        grid-area: 1 / 1 / 1 / 3;
+                    }
+
+                    .footer-languages {
+                        padding: 0;
+                    }
+
+                    .footer-download-app {
+                        padding: 0;
+                        align-items: stretch;
+                    }
+                }
+            }
+
+            .footer-box--two {
+                width: 100%;
+
+                .footer-externalLink {
+                    width: 30%;
+                }
+            }
+
+
+            .footer-generalInformation {
+                flex-direction: row;
+            }
+            .footer-legalInformation{
+                flex-direction: row;
+            }
+        }
+        
+    }
+
+    @media (min-width: $layout-breakpoint-medium) {
+        // background-color: royalblue;
+        .footer--firstSection {
+            
+            .footer-box--three{
+                display: grid;
+                grid-template-columns: 64% 30%;
+                grid-gap: 2rem;
+ 
+                .line-separation--hidden {
+                    display: none;
+                }
             }
         }
     }
