--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -1,10 +1,10 @@
 .component-header {
     position: fixed;
-    z-index: 1;
+    z-index: 4;
     width: 100%;
     box-shadow: black 0px 0px 21px;
     padding: 1rem 4rem;
-    background-color: rgb(255 255 255 / 39%);
+    background-color: rgb(255 255 255 / 14%);
     backdrop-filter: blur(1px);
     transition: 0.7s;
 
@@ -29,7 +29,7 @@
             top: 0px;
             right: 0px;
 
-            z-index: 2;
+            z-index: 4;
             display: flex;
             flex-flow: column nowrap;
             justify-content: space-around;
@@ -164,16 +164,17 @@
     }
 
     .header-navBar {
-        display: none;
+        // display: none;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -100%;
         width: 100%;
         height: 100vh;
         background-color: #fff;
         z-index: 1;
         padding: 12vh 9vw;
-
+        transition: 0.6s;
+        
         nav ul {
             display: flex;
             flex-direction: column;
@@ -184,7 +185,8 @@
         }
 
         &.btn_navBar {
-            display: block;
+            // display: block;
+            left: 0;
         }
     }
 }
