--- a/src/components/styles/Modal.scss
+++ b/src/components/styles/Modal.scss
@@ -1,6 +1,6 @@
 @import '../../styles/Variables.scss';
 
-.CMP-Modal {
+.component-modal {
     width: 90%;
     height: 90vh;
     background-color: $footer-background;
@@ -8,153 +8,68 @@
     place-items: center;
     position: relative;
 
-    .cp_container {
-        margin: 0;
+    //block the scrollbar
+    // &::-webkit-scrollbar {
+    //     display: none;
+    // }
+
+    .modal-exit--btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 2rem;
+    }
+
+    .modal-tab--nav {
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 3rem 2rem;
+
+        ul {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            gap: 1rem;
+
+            li {
+                button {
+                    font-family: 'Cursive', cursive;
+                    font-size: 1.5rem;
+                    font-weight: bold;
+                    color: $text-color;
+                    text-transform: uppercase;
+
+                    &:hover {
+                        color: $text-color-hover;
+                    }
+                }
+            }
+        }
+    }
+
+    // ============================================
+    // ==============  CONTAINER  =================
+    // ============================================
+    padding: 9rem 2rem 2rem;
+
+    .modal-content {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-flow: column wrap;
         width: 100%;
         height: 100%;
-
-        h1 {
-            font-size: 2.5rem;
-            color: white;
-            font-weight: bold;
-            text-shadow: -7px 4px 9px rgba(0, 0, 0, 0.69);
-            margin-bottom: 9px;
-        }
- 
+        overflow: scroll;
+        border: 2px solid black;
+        overflow-x: hidden;
     }
 }
 
-/*  -------------------- MY BTN -------------------- */
-.cp_content-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 2rem;
-    .cp_btn-exit {
-        background-color: transparent;
-        border: 2px solid #000;
-        border-radius: 0;
-        box-sizing: border-box;
-        color: #fff;
-        cursor: pointer;
-        display: inline-block;
-        // float: right;
-        font-weight: 700;
-        letter-spacing: 0.05em;
-        margin: 0;
-        outline: none;
-        overflow: visible;
-        padding: 1.25em 2em;
-        position: relative;
-        text-align: center;
-        text-decoration: none;
-        text-transform: none;
-        transition: all 0.3s ease-in-out;
-        user-select: none;
-        font-size: 13px;
-       }
-       
-       .cp_btn-exit::before {
-        content: " ";
-        width: 1.5625rem;
-        height: 2px;
-        background: black;
-        top: 50%;
-        left: 1.5em;
-        position: absolute;
-        transform: translateY(-50%);
-        transform-origin: center;
-        transition: background 0.3s linear, width 0.3s linear;
-       }
-       
-       .cp_btn-exit .text {
-        font-size: 1.125em;
-        line-height: 1.33333em;
-        padding-left: 2em;
-        display: block;
-        text-align: left;
-        transition: all 0.3s ease-in-out;
-        text-transform: uppercase;
-        text-decoration: none;
-        color: black;
-       }
-       
-       .cp_btn-exit .top-key {
-        height: 2px;
-        width: 1.5625rem;
-        top: -2px;
-        left: 0.625rem;
-        position: absolute;
-        background: #e8e8e8;
-        transition: width 0.5s ease-out, left 0.3s ease-out;
-       }
-       
-       .cp_btn-exit .bottom-key-1 {
-        height: 2px;
-        width: 1.5625rem;
-        right: 1.875rem;
-        bottom: -2px;
-        position: absolute;
-        background: #e8e8e8;
-        transition: width 0.5s ease-out, right 0.3s ease-out;
-       }
-       
-       .cp_btn-exit .bottom-key-2 {
-        height: 2px;
-        width: 0.625rem;
-        right: 0.625rem;
-        bottom: -2px;
-        position: absolute;
-        background: #e8e8e8;
-        transition: width 0.5s ease-out, right 0.3s ease-out;
-       }
-       
-       .cp_btn-exit:hover {
-        color: white;
-        background: black;
-       }
-       
-       .cp_btn-exit:hover::before {
-        width: 0.9375rem;
-        background: white;
-       }
-       
-       .cp_btn-exit:hover .text {
-        color: white;
-        padding-left: 1.5em;
-       }
-       
-       .cp_btn-exit:hover .top-key {
-        left: -2px;
-        width: 0px;
-       }
-       
-       .cp_btn-exit:hover .bottom-key-1,
-        .cp_btn-exit:hover .bottom-key-2 {
-        right: 0;
-        width: 0;
-       }
 
-}
+/*  
+    text-shadow: -7px 4px 9px rgba(0, 0, 0, 0.69);
+        margin: 9rem 2rem 2rem;
 
-
-
-@media screen and (max-width: 774px) {
-    .CMP-PortalContent {
-
-        .cp_container {
-            transform: rotate(6deg);
-            height: fit-content;
-            text-align: center;
-            .PortalContent__iframe {
-                border: 1rem solid white;
-                width: 90%;
-                height: 40vh;
-            }
-        }
-    }
-}
+*/
