--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -129,7 +129,135 @@
     }
 }
 
-/* 
-    overflow: scroll;
-    overflow-x: hidden;
-*/
+.cmp-exit--btn {
+    background-color: transparent;
+    border: 2px solid #000;
+    border-radius: 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    // float: right;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    margin: 0;
+    outline: none;
+    overflow: visible;
+    padding: 0.7em 1em;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    transition: all 0.3s ease-in-out;
+    user-select: none;
+    font-size: 13px;
+}
+
+.cmp-exit--btn::before {
+    content: " ";
+    width: 1.5625rem;
+    height: 2px;
+    background: black;
+    top: 50%;
+    left: 1.5em;
+    position: absolute;
+    transform: translateY(-50%);
+    transform-origin: center;
+    transition: background 0.3s linear, width 0.3s linear;
+}
+
+.cmp-exit--btn .text {
+    font-size: 1.125em;
+    line-height: 1.33333em;
+    padding-left: 2em;
+    display: block;
+    text-align: left;
+    transition: all 0.3s ease-in-out;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: 'Cursive', cursive;
+    color: black;
+}
+
+.cmp-exit--btn .top-key {
+    height: 2px;
+    width: 1.5625rem;
+    top: -2px;
+    left: 0.625rem;
+    position: absolute;
+    background: #e8e8e8;
+    transition: width 0.5s ease-out, left 0.3s ease-out;
+}
+
+.cmp-exit--btn .bottom-key-1 {
+    height: 2px;
+    width: 1.5625rem;
+    right: 1.875rem;
+    bottom: -2px;
+    position: absolute;
+    background: #e8e8e8;
+    transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.cmp-exit--btn .bottom-key-2 {
+    height: 2px;
+    width: 0.625rem;
+    right: 0.625rem;
+    bottom: -2px;
+    position: absolute;
+    background: #e8e8e8;
+    transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.cmp-exit--btn:hover {
+    color: white;
+    background: black;
+}
+
+.cmp-exit--btn:hover::before {
+    width: 0.9375rem;
+    background: white;
+}
+
+.cmp-exit--btn:hover .text {
+    color: white;
+    padding-left: 1.5em;
+}
+
+.cmp-exit--btn:hover .top-key {
+    left: -2px;
+    width: 0px;
+}
+
+.cmp-exit--btn:hover .bottom-key-1,
+.cmp-exit--btn:hover .bottom-key-2 {
+    right: 0;
+    width: 0;
+}
+
+.cmp-line_divider_oblique{
+    display: inline-block;
+    transform: rotate(45deg);
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: black;
+}
+
+.cmp-qr--jalz{
+    width: 12rem;
+    height: 12rem;
+    overflow: hidden;
+    .qr-jalz--img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.AS-OF-LUCK{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: black;
+    text-align: center;
+    margin-right: 0.6rem;
+}
