--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -8,6 +8,8 @@ $input-color : #265e6c;
 $text-secondary : #94D9EC;
 $text-pink : #ff93c7;
 $text-gray : #B1B7BD;
+$text-color-hover : gray;
+$text-color: black;
 
 $shadow : 0 0 13px 0 rgba(185,185,185, .25);
 
@@ -28,3 +30,6 @@ $layout-breakpoint-large: 1100px;
 
 // ICONS
 // https://iconmonstr.com/
+
+// IMAGES
+// https://tinypng.com/
