--- a/src/styles/Root.scss
+++ b/src/styles/Root.scss
@@ -49,7 +49,8 @@ h6 {
 
 p {
     font-size: 1.2rem;
-    font-family: 'Merriweather', serif;
+    // font-family: 'Merriweather', serif;
+    font-family: 'Coursive', cursive;
     text-align: justify;
 }
 
