--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -7,8 +7,8 @@ $input-base : #71CCE5;
 $input-color : #265e6c;
 $text-secondary : #94D9EC;
 $text-pink : #ff93c7;
-$text-gray : #B1B7BD;
-$text-color-hover : gray;
+$text-gray : #9a9a9a;
+$text-color-hover : rgb(85, 84, 84);
 $text-color: black;
 
 $shadow : 0 0 13px 0 rgba(185,185,185, .25);
