--- a/src/components/sub_components/styles/InputGroup.module.scss
+++ b/src/components/sub_components/styles/InputGroup.module.scss
@@ -1,15 +1,20 @@
 .cmp-groupInput {
     position: relative;
     color: black;
+    width: fit-content;
+    margin: 0 auto;
 
     .input {
         font-size: 16px;
-        padding: 10px 10px 10px 5px;
+        padding: 12px 7px 4px;
         display: block;
-        width: 200px;
+        width: 249px;
         border: none;
-        border-bottom: 1px solid #515151;
+        border-bottom: 1px solid #265e6c;
         background: transparent;
+        font-family: "Coursive", cursive;
+        color: #9a9a9a;
+        margin-top: 9px;
 
         &:focus {
             outline: none;
@@ -31,15 +36,15 @@
 
     .input:focus~label,
     .input:valid~label {
-        top: -20px;
+        top: -9px;
         font-size: 14px;
-        color: #5264AE;
+        color: #265e6c;
     }
 
     .bar {
         position: relative;
         display: block;
-        width: 200px;
+        width: 249px;
     }
 
     .bar:before,
@@ -49,10 +54,10 @@
         width: 0;
         bottom: 1px;
         position: absolute;
-        background: #5264AE;
+        background: #265e6c;
         transition: 0.2s ease all;
         -moz-transition: 0.2s ease all;
-        -webkit-transition: 0.2s ease all;
+        -webkit-transition: 0.2s easeF all;
     }
 
     .bar:before {
@@ -81,15 +86,36 @@
     .input:focus~.highlight {
         animation: inputHighlighter 0.3s ease;
     }
+
+    .error {
+        color: red;
+        font-size: 12px;
+        margin-top: 5px;
+    }
 }
 
 @keyframes inputHighlighter {
     from {
-        background: #5264AE;
+        background: #265e6c;
     }
 
     to {
         width: 0;
         background: transparent;
+    }
+}
+
+@media (min-width: 470px) {
+    .cmp-groupInput {
+        width: 69%;
+        max-width: 444px;
+
+        .input {
+            width: 100%;
+        }
+
+        .bar {
+            width: 100%;
+        }
     }
 }
