--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -253,6 +253,54 @@
         height: 100%;
         object-fit: cover;
     }
+
+    @media (min-width: $layout-breakpoint-small) {
+        margin: 2rem;
+        width: 21rem;
+        height: 21rem;
+    }
+
+    @media (min-width: $layout-breakpoint-medium) {}
+
+}
+
+.cmp--upload-img {
+    width: 141px;
+    height: 141px;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    display: grid;
+    place-items: center;
+    margin: 0 auto;
+
+    img {
+        width: 100%;
+        height: auto;
+        position: absolute;
+    }
+
+    .camera--label {
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        margin: 1rem auto;
+        border-radius: 50%;
+        background-color: rgb(255 255 255 / 24%);
+        backdrop-filter: blur(1px);
+        width: 4rem;
+        height: 4rem;
+        box-shadow: black 0px 0px 21px;
+        display: grid;
+        place-items: center;
+        transition: 0.7s;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+
+    }
 }
 
 .AS-OF-LUCK {
@@ -261,4 +309,8 @@
     color: black;
     text-align: center;
     margin-right: 0.6rem;
+
+    @media (min-width: $layout-breakpoint-small) {
+        font-size: 2.5rem;
+    }
 }
