--- a/src/components/sub_components/styles/CardSecondary.scss
+++ b/src/components/sub_components/styles/CardSecondary.scss
@@ -1,36 +1,102 @@
 @import '../../../styles/Variables.scss';
 
-.component-card_secondary{
-    width: 100%;
-    height: 10rem;
-    @extend %center;
-    // gap: 1rem;
+.component-card_secondary {
 
-    border-radius: 0.4rem;
-    background: white;
-    box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 75%);
+    .c-secondary--content--header {
+        width: 100%;
+        height: 10rem;
+        @extend %center;
+        // gap: 1rem;
 
-    position: relative;
-    &:hover {
-        box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 50%);
-        transform: translateY(-0.5rem);
-    }
-    .c-secondary--figure{
-        width: 40%;
-        overflow: hidden;
-        height: 100%;
-        img{
-            height: 100%;
+        border-radius: 0.4rem;
+        background: white;
+        box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 75%);
+        position: relative;
+
+        &:hover {
+            box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 50%);
+            transform: translateY(-0.5rem);
         }
-    } 
 
-    .c-secondary--article{
-        width: 60%;
-        padding-left: 0.8rem;
+        .c-secondary--figure {
+            width: 40%;
+            overflow: hidden;
+            height: 100%;
+
+            img {
+                height: 100%;
+            }
+
+            .button--remove {
+                position: absolute;
+                top: 0;
+                left: 0;
+                @extend %center;
+                gap: 0.5rem;
+                padding: 0.5rem;
+
+
+                img {
+                    width: 3rem;
+                    height: 3rem;
+                    border-radius: 50%;
+                    border: 2px solid $text-gray;
+                    background: $text-gray;
+                    transition: all .3s;
+                }
+            }
+
+            .button--add {
+                position: absolute;
+                top: 0;
+                left: 0;
+                @extend %center;
+                gap: 0.5rem;
+                padding: 0.5rem;
+
+
+                img {
+                    width: 3rem;
+                    height: 3rem;
+                    border-radius: 50%;
+                    border: 2px solid $text-gray;
+                    background: $text-gray;
+                    transition: all .3s;
+                }
+            }
+        }
+
+        .c-secondary--article {
+            overflow: auto;
+            width: 60%;
+            padding: 1rem;
+            margin-top: auto;
+            height: 100%;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+        }
     }
-    @media (min-width: $layout-breakpoint-small) {
-       
+
+    .c-secondary-detail {
+        background-color: black;
+        padding: 2rem;
+        border-radius: 0 0 0.4rem 0.4rem;
+        box-shadow: 0px 2px 6px 0px rgb(0 0 0 / 75%);
     }
+
+    .c-secondary-detail {
+        display: none;
+    }
+
+    &.active {
+        .c-secondary-detail {
+            display: block;
+        }
+    }
+
+    @media (min-width: $layout-breakpoint-small) {}
 
     @media (min-width: $layout-breakpoint-medium) {}
 }
