--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -178,7 +178,7 @@
         height: 100vh;
         background-color: #fff;
         z-index: 1;
-        padding: 12vh 9vw;
+        padding: 9vw 9vw;
         transition: 0.6s;
 
         nav ul {
