--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -247,6 +247,7 @@
     width: 12rem;
     height: 12rem;
     overflow: hidden;
+
     .qr-jalz--img {
         width: 100%;
         height: 100%;
@@ -299,6 +300,54 @@
             transform: scale(1.1);
         }
 
+    }
+}
+
+.cmp--navigation--bar {
+    ul {
+        gap: 3rem;
+    }
+
+    .redirection {
+
+        padding: 9px 21px;
+        width: 140px;
+        height: 45px;
+        font-size: 23px;
+        cursor: pointer;
+        border: none;
+        outline: none;
+        background: transparent;
+        color: black;
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: 700;
+        position: relative;
+        transition: all 0.5s;
+        z-index: 1;
+    }
+
+    .redirection::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 5px;
+        height: 100%;
+        background-color: black;
+        z-index: -1;
+        transition: all 0.5s;
+    }
+
+    .redirection:hover::before {
+        width: 100%;
+    }
+
+    .redirection:hover {
+        color: white;
+    }
+
+    .redirection:active:before {
+        background: #b9b9b9;
     }
 }
 
